Refactored intro view to use search form view

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -25,8 +25,14 @@
 }
 
 .hero-unit {
-  .cigar-name {
-    @extend .btn-large;
+  .cigar-search-form {
+    input {
+      @extend .btn-large;
+    }
+
+    input[type=search] {
+      @extend .input-large;
+    }
   }
 }
 
