--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -28,8 +28,8 @@
   .cigar-search-form {
     label {
       @extend .hero-unit;
-      padding-left: 0;
-      padding-right: 0;
+      padding: 0;
+      margin: 0;
     }
 
     input {
